overflow fix

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -61,6 +61,7 @@
   background-clip: text;
   text-align: start;
   color: transparent;
+  word-break: break-all;
 }
 
 .advantages__item-header--left {
